# ocaml-pocketfft

./: .gitignore  .ocamlformat  README.md  dune-project  pocketfft.opam
.github/workflows/: build.yml  lint.yml  test.yml
src/: dune  pocketfft_stubs.cpp
test/: dune  test_pocketfft.ml
